# test-repo

./: CMakeLists.txt
candleApp/: CMakeLists.txt  main.cpp
candleLib/: CMakeLists.txt
candleLib/include/candle/: candle.h
candleLib/include/tests/: tests.h
candleLib/src/: candle.cpp  tests.cpp
src/: candle.cpp  candle.hpp  main.cpp  tests.cpp  tests.hpp
test/: body_contains_test.cpp  body_size_test.cpp  contains_test.cpp  full_size_test.cpp  green_test.cpp  red_test.cpp
